[package]
name = "ysm_upload"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
rust-embed = "8.10.0"
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
urlencoding = "2.1"
serde_yaml = "0.9"
axum-extra = { version = "0.12.5", features = ["cookie"] }
jwt = "0.16.0"
anyhow = { version = "1.0.100", features = ["backtrace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt"] }
hmac = "0.12.1"
sha2 = { version = "0.10.9" }
async-trait = "0.1"
time = "0.3.45"

[build-dependencies]
rust-embed = "8.10.0"
